--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "jsx-to-string": "^1.1.0",
-    "react-copy-to-clipboard": "^4.3.1"
+    "react-copy-to-clipboard": "^4.3.1",
+    "react-element-to-jsx-string": "^6.4.0"
   }
 }
