--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "npm-run-all": "^4.0.2",
     "prettier": "^1.2.2",
     "prop-types": "^15.5.8",
-    "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "rimraf": "^2.6.1"
   },
   "dependencies": {
-    "jsx-to-string": "^1.1.0",
-    "react-copy-to-clipboard": "^4.3.1",
-    "react-element-to-jsx-string": "^6.4.0"
+    "immutable": "4.0.0-rc.2",
+    "json-stringify-pretty-compact": "1.0.3",
+    "react-copy-to-clipboard": "4.3.1",
+    "react": "^15.5.4"
   }
 }
