--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@kadira/storybook-addon-options": "^1.0.2",
     "babel-cli": "^6.24.1",
     "babel-jest": "^19.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "jest": "^19.0.2",
@@ -32,7 +33,7 @@
   "dependencies": {
     "immutable": "4.0.0-rc.2",
     "json-stringify-pretty-compact": "1.0.3",
-    "react-copy-to-clipboard": "4.3.1",
-    "react": "^15.5.4"
+    "react": "^15.5.4",
+    "react-copy-to-clipboard": "4.3.1"
   }
 }
