--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "prettier.semi": false,
     "prettier.singleQuote": true,
     "prettier.trailingComma": "all",
+    "prettier.tabWidth": 2,
     "editor.formatOnSave": true,
     "editor.tabSize": 2
 }
