--- a/package.json
+++ b/package.json
@@ -32,9 +32,8 @@
     "storyshots": "^3.2.2"
   },
   "dependencies": {
-    "immutable": "4.0.0-rc.2",
-    "json-stringify-pretty-compact": "1.0.3",
     "react": "^15.5.4",
-    "react-copy-to-clipboard": "4.3.1"
+    "react-copy-to-clipboard": "4.3.1",
+    "react-element-to-jsx-string": "^6.4.0"
   }
 }
