--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "prettier.singleQuote": true,
     "prettier.trailingComma": "all",
     "prettier.tabWidth": 2,
+    "prettier.printWidth": 100,
     "editor.formatOnSave": true,
     "editor.tabSize": 2
 }
