--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
   "dependencies": {
     "react": "^15.5.4",
     "react-copy-to-clipboard": "4.3.1",
-    "react-element-to-jsx-string": "6.3.0"
+    "react-element-to-jsx-string": "^6.4.0"
   }
 }
