migrate to storybook v3

--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "prepublish": "npm run build"
   },
   "devDependencies": {
-    "@kadira/storybook": "^2.35.3",
-    "@kadira/storybook-addon-options": "^1.0.2",
+    "@storybook/addon-options": "^3.0.0-alpha.0",
+    "@storybook/addon-storyshots": "^3.0.0-alpha.0",
+    "@storybook/react": "^3.0.0-alpha.0",
     "babel-cli": "^6.24.1",
     "babel-jest": "^19.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -28,8 +29,8 @@
     "prettier": "^1.2.2",
     "prop-types": "^15.5.8",
     "react-dom": "^15.5.4",
-    "rimraf": "^2.6.1",
-    "storyshots": "^3.2.2"
+    "react-test-renderer": "^15.5.4",
+    "rimraf": "^2.6.1"
   },
   "dependencies": {
     "react": "^15.5.4",
