--- a/package.json
+++ b/package.json
@@ -2,44 +2,47 @@
   "name": "storybook-addon-jsx",
   "version": "5.0.0",
   "description": "Display the JSX of the story",
-  "main": "lib/index.js",
   "license": "MIT",
+  "main": "lib/index.js",
   "scripts": {
     "prebuild": "rimraf lib",
     "build": "babel src --out-dir lib --ignore spec.js,test.js",
     "build:dev": "babel -w src --out-dir lib --ignore spec.js,test.js",
     "format": "prettier --no-semi --single-quote --trailing-comma all --tab-width 2 --bracket-spacing true --print-width 100 --write 'src/**/*.js'",
+    "prepare": "npm run build",
+    "storybook": "start-storybook -p 9009 -c ./example/.storybook",
     "test": "npm run test:all",
     "test:all": "jest src",
-    "test:dev": "jest src --watch",
-    "storybook": "start-storybook -p 9009 -c ./example/.storybook",
-    "prepare": "npm run build"
-  },
-  "peerDependencies": {
-    "babel-core": ">=6.0.0",
-    "react": ">=15.5.4",
-    "react-dom": ">=15.5.4"
-  },
-  "devDependencies": {
-    "@storybook/addon-options": "^3.2.16",
-    "@storybook/addon-storyshots": "^3.2.16",
-    "@storybook/react": "^3.2.16",
-    "babel-cli": "^6.24.1",
-    "babel-jest": "^21.2.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-react": "^6.24.1",
-    "jest": "^21.2.1",
-    "npm-run-all": "^4.0.2",
-    "prettier": "^1.7.4",
-    "prop-types": "^15.5.8",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-test-renderer": "^16.0.0",
-    "rimraf": "^2.6.1"
+    "test:dev": "jest src --watch"
   },
   "dependencies": {
-    "react-copy-to-clipboard": "5.0.1",
-    "react-element-to-jsx-string": "13.0.0"
+    "react-copy-to-clipboard": "^5.0.1",
+    "react-element-to-jsx-string": "^13.1.0"
+  },
+  "devDependencies": {
+    "@storybook/addon-options": "^3.2.17",
+    "@storybook/addon-storyshots": "^3.2.17",
+    "@storybook/addons": "^3.2.17",
+    "@storybook/channels": "^3.2.17",
+    "@storybook/react": "^3.2.17",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "jest": "^21.2.1",
+    "npm-run-all": "^4.1.2",
+    "prettier": "^1.9.2",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-test-renderer": "^16.2.0",
+    "rimraf": "^2.6.2"
+  },
+  "peerDependencies": {
+    "babel-core": "^6.26.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
