--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prebuild": "rimraf lib",
     "build": "babel src --out-dir lib --ignore spec.js,test.js",
     "build:dev": "babel -w src --out-dir lib --ignore spec.js,test.js",
-    "format": "prettier --no-semi --single-quote --trailing-comma all --tab-width 2 --bracket-spacing true --print-width 100 --write 'src/**/*.js'",
+    "format":
+      "prettier --no-semi --single-quote --trailing-comma all --tab-width 2 --bracket-spacing true --print-width 100 --write 'src/**/*.js'",
     "prepare": "npm run build",
     "storybook": "start-storybook -p 9009 -c ./example/.storybook",
     "test": "npm run test:all",
@@ -20,18 +21,18 @@
     "react-element-to-jsx-string": "^13.1.0"
   },
   "devDependencies": {
-    "@storybook/addon-options": "^3.2.17",
-    "@storybook/addon-storyshots": "^3.2.17",
-    "@storybook/addons": "^3.2.17",
-    "@storybook/channels": "^3.2.17",
-    "@storybook/react": "^3.2.17",
+    "@storybook/addon-options": "^3.3.3",
+    "@storybook/addon-storyshots": "^3.3.3",
+    "@storybook/addons": "^3.3.3",
+    "@storybook/channels": "^3.3.3",
+    "@storybook/react": "^3.3.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-jest": "^21.2.0",
+    "babel-jest": "^22.0.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "jest": "^21.2.1",
+    "jest": "^22.0.4",
     "npm-run-all": "^4.1.2",
     "prettier": "^1.9.2",
     "prop-types": "^15.6.0",
