--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "storybook": "start-storybook -p 9009 -c ./example/.storybook",
     "test": "npm run test:all",
     "test:all": "jest src",
-    "test:dev": "jest src --watch"
+    "test:dev": "jest src --watch",
+    "netlify": "build-storybook -c ./example/.storybook"
   },
   "dependencies": {
     "react-copy-to-clipboard": "^5.0.1",
