--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-addon-jsx",
-  "version": "5.4.0",
+  "version": "6.0.0",
   "description": "Display the JSX of the story",
   "license": "MIT",
   "main": "lib/index.js",
@@ -9,41 +9,47 @@
     "build": "babel src --out-dir lib --ignore spec.js,test.js",
     "build:dev": "babel -w src --out-dir lib --ignore spec.js,test.js",
     "format": "prettier --no-semi --single-quote --trailing-comma all --tab-width 2 --bracket-spacing true --print-width 100 --write 'src/**/*.js'",
+    "netlify": "build-storybook -c ./example/.storybook",
     "prepare": "npm run build",
     "storybook": "start-storybook -p 9009 -c ./example/.storybook",
     "test": "npm run test:all",
     "test:all": "jest src",
-    "test:dev": "jest src --watch",
-    "netlify": "build-storybook -c ./example/.storybook"
+    "test:dev": "jest src --watch"
+  },
+  "jest": {
+    "testURL": "http://localhost"
   },
   "dependencies": {
-    "js-beautify": "^1.7.5",
+    "js-beautify": "^1.8.8",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-element-to-jsx-string": "^14.0.1"
+    "react-element-to-jsx-string": "^14.0.2"
   },
   "devDependencies": {
-    "@storybook/addon-options": "^3.4.8",
-    "@storybook/addon-storyshots": "^3.4.8",
-    "@storybook/addons": "^3.4.8",
-    "@storybook/channels": "^3.4.8",
-    "@storybook/react": "^3.4.8",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^23.4.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "jest": "^23.4.1",
-    "npm-run-all": "^4.1.3",
-    "prettier": "^1.13.7",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-options": "^4.0.8",
+    "@storybook/addon-storyshots": "^4.0.9",
+    "@storybook/addons": "^4.0.9",
+    "@storybook/channels": "^4.0.8",
+    "@storybook/react": "^4.0.9",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
+    "jest": "test",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.15.2",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-test-renderer": "^16.4.1",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-test-renderer": "^16.6.3",
+    "regenerator-runtime": "^0.13.1",
     "rimraf": "^2.6.2"
   },
   "peerDependencies": {
-    "babel-core": "^6.26.0",
+    "@babel/core": "^7.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   }
