--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "build:dev": "babel -w src --out-dir lib --ignore spec.js,test.js",
     "format": "prettier --no-semi --single-quote --trailing-comma all --tab-width 2 --bracket-spacing true --print-width 100 --write 'src/**/*.js'",
     "netlify": "build-storybook -c ./example/.storybook",
-    "prepare": "npm run build",
+    "prepare": "yarn build",
     "storybook": "start-storybook -p 9009 -c ./example/.storybook",
-    "test": "npm run test:all",
+    "test": "yarn test:all",
     "test:all": "jest src",
     "test:dev": "jest src --watch"
   },
