--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "description": "Display the JSX of the story",
   "license": "MIT",
   "main": "lib/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/storybooks/addon-jsx"
+  },
+  "author": {
+    "email": "lisowski54@gamil.com",
+    "name": "Andrew Lisowski"
+  },
   "scripts": {
     "prebuild": "rimraf lib",
     "build": "babel src --out-dir lib --ignore spec.js,test.js",
@@ -14,7 +22,8 @@
     "storybook": "start-storybook -p 9009 -c ./example/.storybook",
     "test": "yarn test:all",
     "test:all": "jest src",
-    "test:dev": "jest src --watch"
+    "test:dev": "jest src --watch",
+    "release": "./scripts/release.sh"
   },
   "jest": {
     "testURL": "http://localhost"
@@ -35,6 +44,7 @@
     "@storybook/addons": "^4.0.9",
     "@storybook/channels": "^4.0.8",
     "@storybook/react": "^4.0.9",
+    "auto": "^4.8.11",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
