--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "husky": "^1.3.1",
     "jest": "test",
+    "lint-staged": "^8.1.5",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.15.2",
     "prop-types": "^15.6.2",
@@ -62,5 +64,19 @@
     "@babel/core": "^7.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
+  },
+  "prettier": {
+    "singleQuote": true
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
