--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "@storybook/addon-options": "^4.0.8",
-    "@storybook/addon-storyshots": "^4.0.9",
-    "@storybook/addons": "^4.0.9",
-    "@storybook/channels": "^4.0.8",
-    "@storybook/react": "^4.0.9",
+    "@storybook/core-events": "^5.0.1",
+    "@storybook/addon-options": "^5.0.1",
+    "@storybook/addon-storyshots": "^5.0.1",
+    "@storybook/addons": "^5.0.1",
+    "@storybook/channels": "^5.0.1",
+    "@storybook/react": "^5.0.1",
     "auto": "^4.8.11",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
