--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
         "shippedProposals": true
       }
     ],
-    "@babel/preset-react"
+    "@babel/preset-react",
+    "@babel/preset-typescript"
   ]
 }
