--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "scripts": {
     "prebuild": "rimraf lib",
-    "build": "babel src --out-dir lib --ignore spec.js,test.js",
-    "build:dev": "babel -w src --out-dir lib --ignore spec.js,test.js",
+    "build": "babel src --out-dir lib --ignore spec.js,test.js --extensions .ts --extensions .js --extensions .tsx",
+    "build:dev": "babel -w src --out-dir lib --ignore spec.js,test.js --extensions .ts --extensions .js --extensions .tsx",
     "format": "prettier --no-semi --single-quote --trailing-comma all --tab-width 2 --bracket-spacing true --print-width 100 --write 'src/**/*.js'",
     "netlify": "build-storybook -c ./example/.storybook",
     "prepare": "yarn build",
@@ -40,12 +40,17 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.3.3",
     "@storybook/addon-options": "^5.0.1",
     "@storybook/addon-storyshots": "^5.0.1",
     "@storybook/addons": "^5.0.1",
     "@storybook/channels": "^5.0.1",
     "@storybook/core-events": "^5.0.1",
     "@storybook/react": "^5.0.1",
+    "@types/js-beautify": "^1.8.0",
+    "@types/react": "^16.8.8",
+    "@types/react-copy-to-clipboard": "^4.2.6",
+    "@types/storybook__react": "^4.0.1",
     "auto": "^4.8.11",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
