--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "auto": "^4.8.11",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.5",
     "husky": "^1.3.1",
     "jest": "test",
     "lint-staged": "^8.1.5",
