--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "@types/storybook__react": "^4.0.1",
     "auto": "^4.8.11",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.5",
     "husky": "^1.3.1",
-    "jest": "test",
+    "jest": "^24.5.0",
     "lint-staged": "^8.1.5",
     "prettier": "^1.15.2",
     "prop-types": "^15.6.2",
@@ -68,8 +68,8 @@
     "typescript": "^3.3.3333"
   },
   "peerDependencies": {
-    "@storybook/addons": "^5.0.1",
     "@babel/core": "^7.1.2",
+    "@storybook/addons": "^5.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
