add released plugin to auto

--- a/package.json
+++ b/package.json
@@ -85,5 +85,11 @@
       "prettier --write",
       "git add"
     ]
+  },
+  "auto": {
+    "plugins": [
+      "npm",
+      "released"
+    ]
   }
 }
