--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "netlify": "build-storybook -c ./example/.storybook",
     "prepare": "yarn build",
     "storybook": "start-storybook -p 9009 -c ./example/.storybook",
+    "build-storybook": "build-storybook",
     "test": "yarn test:all",
     "test:all": "jest src",
     "test:dev": "jest src --watch",
@@ -26,7 +27,8 @@
     "copy-to-clipboard": "^3.0.8",
     "js-beautify": "^1.8.8",
     "prismjs": "^1.15.0",
-    "react-element-to-jsx-string": "^14.0.3"
+    "react-element-to-jsx-string": "^14.0.3",
+    "storybook-chromatic": "^3.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
