fix: Adds carret back to "react-element-to-jsx-string" version in package.json
Based on [this comment](https://github.com/storybookjs/addon-jsx/pull/97#discussion_r370140769) left on the PR #97.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@storybook/components": "^5.2.5",
     "copy-to-clipboard": "^3.0.8",
     "js-beautify": "^1.8.8",
-    "react-element-to-jsx-string": "14.3.1"
+    "react-element-to-jsx-string": "^14.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
