--- a/package.json
+++ b/package.json
@@ -52,11 +52,13 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@storybook/addons": "^5.2.5",
+    "@storybook/channels": "^5.2.5",
+    "@storybook/theming": "^5.2.5",
+    "@storybook/components": "^5.2.5",
+    "@storybook/core-events": "^5.2.5",
     "@storybook/addon-options": "^5.0.3",
     "@storybook/addon-storyshots": "^5.0.3",
-    "@storybook/addons": "^5.0.3",
-    "@storybook/channels": "^5.0.3",
-    "@storybook/core-events": "^5.0.3",
     "@storybook/react": "^5.0.3",
     "@types/js-beautify": "^1.8.0",
     "@types/react": "^16.8.8",
