Add @hipstersmoothie as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -21,6 +21,18 @@
         "ideas",
         "doc"
       ]
+    },
+    {
+      "login": "hipstersmoothie",
+      "name": "Andrew Lisowski",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/1192452?v=4",
+      "profile": "http://hipstersmoothie.com",
+      "contributions": [
+        "code",
+        "doc",
+        "infra",
+        "maintenance"
+      ]
     }
   ],
   "contributorsPerLine": 7
