Add @leonelgalan as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -71,6 +71,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "leonelgalan",
+      "name": "Leonel Galán",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/727774?v=4",
+      "profile": "http://www.leonelgalan.com",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
