Add @Landerson352 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -80,6 +80,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "Landerson352",
+      "name": "Lincoln Anderson",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/5214462?v=4",
+      "profile": "http://threefivetwo.com",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
