--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -89,6 +89,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "smollweide",
+      "name": "Simon Mollweide",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/2912007?v=4",
+      "profile": "https://github.com/smollweide",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
