--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -98,6 +98,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "lflpowell",
+      "name": "lflpowell",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/37211236?v=4",
+      "profile": "https://github.com/lflpowell",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
