--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -107,6 +107,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "expe-lbenychou",
+      "name": "lionelbenychou",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/31204794?v=4",
+      "profile": "https://github.com/expe-lbenychou",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
