update auto add all-contributors

--- a/package.json
+++ b/package.json
@@ -45,28 +45,31 @@
     "storybook-pretty-props": "^1.0.3"
   },
   "devDependencies": {
-    "@design-systems/eslint-config": "^1.4.15",
-    "eslint": "^6.8.0",
+    "@auto-it/all-contributors": "^9.34.1",
+    "@auto-it/first-time-contributor": "^9.34.1",
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@storybook/addons": "^5.2.5",
-    "@storybook/channels": "^5.2.5",
-    "@storybook/theming": "^5.2.5",
-    "@storybook/components": "^5.2.5",
-    "@storybook/core-events": "^5.2.5",
+    "@design-systems/eslint-config": "^1.4.15",
     "@storybook/addon-options": "^5.0.3",
     "@storybook/addon-storyshots": "^5.0.3",
+    "@storybook/addons": "^5.2.5",
+    "@storybook/channels": "^5.2.5",
+    "@storybook/components": "^5.2.5",
+    "@storybook/core-events": "^5.2.5",
     "@storybook/react": "^5.0.3",
+    "@storybook/theming": "^5.2.5",
     "@types/js-beautify": "^1.8.0",
     "@types/react": "^16.8.8",
     "@types/storybook__react": "^4.0.1",
-    "auto": "^9.26.8",
+    "all-contributors-cli": "^6.14.2",
+    "auto": "^9.34.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.6",
+    "eslint": "^6.8.0",
     "husky": "^3.0.9",
     "jest": "^24.5.0",
     "lint-staged": "^9.4.2",
@@ -84,16 +87,18 @@
   "peerDependencies": {
     "@storybook/addons": ">= 5.x",
     "@storybook/channels": ">= 5.x",
-    "@storybook/theming": ">= 5.x",
     "@storybook/components": ">= 5.x",
     "@storybook/core-events": ">= 5.x",
+    "@storybook/theming": ">= 5.x",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
   "auto": {
     "plugins": [
       "npm",
-      "released"
+      "released",
+      "first-time-contributor",
+      "all-contributors"
     ]
   }
 }
