--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -134,6 +134,16 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "petermikitsh",
+      "name": "Peter Mikitsh",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/1571918?v=4",
+      "profile": "http://peter.mikit.sh",
+      "contributions": [
+        "doc",
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
