Add @lisamartin00 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -144,6 +144,15 @@
         "doc",
         "code"
       ]
+    },
+    {
+      "login": "lisamartin00",
+      "name": "lisamartin00",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/6465955?v=4",
+      "profile": "https://github.com/lisamartin00",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
