--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,15 +1,14 @@
-name: "Chromatic"
-on:
-  pull_request
+name: 'Chromatic'
+on: pull_request
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - run: |
-        yarn
-    - uses: chromaui/action@releases/v1
-      with:
-        appCode: qceepgaflpj
-        token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v1
+      - run: |
+          yarn
+      - uses: chromaui/action@v1
+        with:
+          appCode: qceepgaflpj
+          token: ${{ secrets.GITHUB_TOKEN }}
