--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -172,6 +172,15 @@
         "infra",
         "code"
       ]
+    },
+    {
+      "login": "jimmyandrade",
+      "name": "Jimmy Andrade",
+      "avatar_url": "https://avatars.githubusercontent.com/u/2307245?v=4",
+      "profile": "http://jimmyandrade.com",
+      "contributions": [
+        "infra"
+      ]
     }
   ],
   "contributorsPerLine": 7
