--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "dependencies": {
     "copy-to-clipboard": "^3.0.8",
     "js-beautify": "^1.8.8",
-    "react-element-to-jsx-string": "^14.3.1",
+    "react-element-to-jsx-string": "15",
     "storybook-pretty-props": "^1.0.3"
   },
   "devDependencies": {
